This file documents the revision history for the Monitoring Webinterface Thruk.

1.1.6    Thu Dec 30 19:09:17 CET 2011
          - added json export on status page (thanks Justin Burnham)
          - added command preview to config tool
          - fixed display of acknowledgements with expire date
          - fixed js error when adding more than 10 filter
          - themes: fixed minor design flaws in Nuvola theme

1.1.5    Thu Dec  5 21:04:17 CET 2011
          - reloading pages by pressing f5 works now even with frames
          - config tool: added wizard to create/change commands
                         set ip automatically
                         added criticy for shinken backends
                         added address6 for icinga backends
                         fixed reloading config
                         fixed command line wizard

1.1.4    Sun Nov 29 16:21:21 CET 2011
          - added more button for search suggestions
          - remove downtimes quick command now only removes active downtimes
          - added quick command to remove future downtimes
          - removed string::strip dependency
          - minor enhancements for config tool

1.1.3    Sat Nov 12 23:03:12 CET 2011
          - added support for objects in config editor
          - added support for contactgroups in the cgi.cfg
          - added support for groups in the cgi.cfg config tool
          - added refresh button on top of each page
          - command_disabled supports ranges
          - hide links to cmd.cgi which are disabled by the command_disabled option
          - backends can only be hidden by config if there are more than one
          - show backend related errors as backend chooser tooltip and in process info page
          - fixed hiding filter select popup
          - fixed sorting by duration on status page

1.1.2    Tue Oct 18 17:57:53 CEST 2011
          - added /pnp/ to possible pnp4nagios urls
          - search in notes_url for pnp4nagios urls too