@@ -2,7 +2,9 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 1.1.6    Thu Dec 30 19:09:17 CET 2011
           - added json export on status page (thanks Justin Burnham)
-          - added command preview to config tool
+          - config tool:
+            - added command preview
+            - added module support (icinga only)
           - fixed display of acknowledgements with expire date
           - fixed js error when adding more than 10 filter
           - themes: fixed minor design flaws in Nuvola theme
